feat(feed): deactivated by default
